gcc/testsuite/gcc.dg/pr28419.c
/* { dg-do compile } */
void foo() 
const char* p = __FUNCTION__; /* { dg-error "" } */
